--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-chartjs-2": "^3.3.0",
     "react-confirm-alert": "^2.7.0",
     "react-dom": "^17.0.2",
+    "react-paginate": "^8.0.0",
     "react-router": "^6.0.1",
     "react-router-dom": "^6.0.1",
     "react-scripts": "4.0.3",
