--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "chart.js": "^3.6.0",
+    "html-react-parser": "^1.4.0",
+    "html-to-text": "^8.1.0",
     "lodash": "^4.17.21",
+    "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-chartjs-2": "^3.3.0",
