--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.0.1",
     "react-scripts": "4.0.3",
     "react-select": "^5.2.1",
+    "react-table": "^7.7.0",
     "recharts": "^2.1.6",
     "web-vitals": "^1.1.2"
   },
