--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "-": "^0.0.1",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "chart.js": "^3.6.0",
+    "google": "^2.1.0",
+    "google-trends-api": "^4.9.2",
     "html-react-parser": "^1.4.0",
     "html-to-text": "^8.1.0",
     "lodash": "^4.17.21",
@@ -17,15 +20,20 @@
     "react-bootstrap": "^2.0.2",
     "react-chartjs-2": "^3.3.0",
     "react-confirm-alert": "^2.7.0",
+    "react-datalist-input": "^2.2.1",
     "react-dom": "^17.0.2",
+    "react-load-script": "^0.0.6",
     "react-paginate": "^8.0.0",
     "react-router": "^6.0.1",
     "react-router-dom": "^6.0.1",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "react-select": "^5.2.1",
     "react-table": "^7.7.0",
     "recharts": "^2.1.6",
-    "web-vitals": "^1.1.2"
+    "trends": "^0.0.1",
+    "web-vitals": "^1.1.2",
+    "widget": "^0.0.2",
+    "widget-google-trends": "^0.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
