--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-confirm-alert": "^2.7.0",
     "react-datalist-input": "^2.2.1",
     "react-dom": "^17.0.2",
+    "react-input-emoji": "^4.0.9",
     "react-load-script": "^0.0.6",
     "react-paginate": "^8.0.0",
     "react-router": "^6.0.1",
