twitter spliter Counter added

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "cryptoapi",
   "version": "0.1.0",
+  "homepage": "http://masoudnaji.com",
   "private": true,
   "dependencies": {
     "-": "^0.0.1",
