--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "browser-image-compression": "^1.0.17",
     "chart.js": "^3.6.0",
     "google": "^2.1.0",
     "google-trends-api": "^4.9.2",
@@ -35,7 +36,8 @@
     "trends": "^0.0.1",
     "web-vitals": "^1.1.2",
     "widget": "^0.0.2",
-    "widget-google-trends": "^0.0.1"
+    "widget-google-trends": "^0.0.1",
+    "xlsx": "^0.17.4"
   },
   "scripts": {
     "start": "react-scripts start",
