--- a/package.json
+++ b/package.json
@@ -19,15 +19,16 @@
     "json-as-xlsx": "^2.3.10",
     "load-json-file": "^7.0.1",
     "lodash": "^4.17.21",
-    "node-sass": "^6.0.1",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.0.2",
+    "react-alice-carousel": "^2.5.1",
+    "react-bootstrap": "^2.1.1",
     "react-chartjs-2": "^3.3.0",
     "react-confirm-alert": "^2.7.0",
     "react-datalist-input": "^2.2.1",
     "react-dom": "^17.0.2",
     "react-input-emoji": "^4.0.9",
     "react-load-script": "^0.0.6",
+    "react-lorem-ipsum": "^1.4.9",
     "react-paginate": "^8.0.0",
     "react-router": "^6.0.1",
     "react-router-dom": "^6.0.1",
@@ -35,6 +36,7 @@
     "react-select": "^5.2.1",
     "react-table": "^7.7.0",
     "recharts": "^2.1.6",
+    "sass": "^1.48.0",
     "trends": "^0.0.1",
     "web-vitals": "^1.1.2",
     "widget": "^0.0.2",
