regex test page added

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-confirm-alert": "^2.7.0",
     "react-datalist-input": "^2.2.1",
     "react-dom": "^17.0.2",
+    "react-highlight-within-textarea": "^2.1.2",
     "react-input-emoji": "^4.0.9",
     "react-load-script": "^0.0.6",
     "react-lorem-ipsum": "^1.4.9",
