--- a/package.json
+++ b/package.json
@@ -12,20 +12,27 @@
     "bootstrap": "^5.1.3",
     "browser-image-compression": "^1.0.17",
     "chart.js": "^3.6.0",
-    "google": "^2.1.0",
+    "dotenv": "^16.0.0",
+    "draft-js": "^0.11.7",
+    "google": "^0.6.0",
     "google-trends-api": "^4.9.2",
     "html-react-parser": "^1.4.0",
     "html-to-text": "^8.1.0",
     "json-as-xlsx": "^2.3.10",
     "load-json-file": "^7.0.1",
     "lodash": "^4.17.21",
+    "moment": "^2.29.1",
+    "prismjs": "^1.27.0",
     "react": "^17.0.2",
     "react-alice-carousel": "^2.5.1",
     "react-bootstrap": "^2.1.1",
     "react-chartjs-2": "^3.3.0",
     "react-confirm-alert": "^2.7.0",
     "react-datalist-input": "^2.2.1",
+    "react-datepicker": "^4.7.0",
+    "react-diff-viewer": "^3.1.1",
     "react-dom": "^17.0.2",
+    "react-draft-wysiwyg": "^1.14.7",
     "react-highlight-within-textarea": "^2.1.2",
     "react-input-emoji": "^4.0.9",
     "react-load-script": "^0.0.6",
@@ -33,7 +40,7 @@
     "react-paginate": "^8.0.0",
     "react-router": "^6.0.1",
     "react-router-dom": "^6.0.1",
-    "react-scripts": "^4.0.3",
+    "react-scripts": "^5.0.0",
     "react-select": "^5.2.1",
     "react-table": "^7.7.0",
     "recharts": "^2.1.6",
@@ -67,5 +74,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "babel-plugin-prismjs": "^2.1.0"
   }
 }
