--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "prismjs": "^1.27.0",
     "react": "^17.0.2",
     "react-alice-carousel": "^2.5.1",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-bootstrap": "^2.1.1",
     "react-chartjs-2": "^3.3.0",
     "react-confirm-alert": "^2.7.0",
