--- a/package.json
+++ b/package.json
@@ -28,13 +28,17 @@
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-bootstrap": "^2.1.1",
     "react-chartjs-2": "^3.3.0",
+    "react-compare-image": "^3.1.0",
     "react-confirm-alert": "^2.7.0",
+    "react-convert-image": "^0.5.0",
     "react-datalist-input": "^2.2.1",
     "react-datepicker": "^4.7.0",
     "react-diff-viewer": "^3.1.1",
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.7",
+    "react-dropzone": "^12.0.4",
     "react-highlight-within-textarea": "^2.1.2",
+    "react-icons": "^4.3.1",
     "react-input-emoji": "^4.0.9",
     "react-load-script": "^0.0.6",
     "react-lorem-ipsum": "^1.4.9",
@@ -44,8 +48,10 @@
     "react-scripts": "^5.0.0",
     "react-select": "^5.2.1",
     "react-table": "^7.7.0",
+    "react-tooltip": "^4.2.21",
     "recharts": "^2.1.6",
     "sass": "^1.48.0",
+    "styled-components": "^5.3.5",
     "trends": "^0.0.1",
     "web-vitals": "^1.1.2",
     "widget": "^0.0.2",
