--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-dropzone": "^12.0.4",
     "react-highlight-within-textarea": "^2.1.2",
     "react-icons": "^4.3.1",
+    "react-image-file-resizer": "^0.4.7",
     "react-input-emoji": "^4.0.9",
     "react-load-script": "^0.0.6",
     "react-lorem-ipsum": "^1.4.9",
