--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chart.js": "^3.6.0",
     "dotenv": "^16.0.0",
     "draft-js": "^0.11.7",
+    "framer-motion": "^6.3.0",
     "google": "^0.6.0",
     "google-trends-api": "^4.9.2",
     "html-react-parser": "^1.4.0",
@@ -37,6 +38,7 @@
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.7",
     "react-dropzone": "^12.0.4",
+    "react-gist": "^1.2.4",
     "react-highlight-within-textarea": "^2.1.2",
     "react-icons": "^4.3.1",
     "react-image-file-resizer": "^0.4.7",
