--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-draft-wysiwyg": "^1.14.7",
     "react-dropzone": "^12.0.4",
     "react-gist": "^1.2.4",
+    "react-helmet": "^6.1.0",
     "react-highlight-within-textarea": "^2.1.2",
     "react-icons": "^4.3.1",
     "react-image-file-resizer": "^0.4.7",
@@ -48,6 +49,7 @@
     "react-paginate": "^8.0.0",
     "react-router": "^6.0.1",
     "react-router-dom": "^6.0.1",
+    "react-router-sitemap": "^1.2.0",
     "react-scripts": "^5.0.0",
     "react-select": "^5.2.1",
     "react-table": "^7.7.0",
