--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-confirm-alert": "^2.7.0",
     "react-convert-image": "^0.5.0",
     "react-datalist-input": "^2.2.1",
+    "react-date-picker": "^8.4.0",
     "react-datepicker": "^4.7.0",
     "react-diff-viewer": "^3.1.1",
     "react-dom": "^17.0.2",
@@ -54,6 +55,7 @@
     "react-icons": "^4.3.1",
     "react-image-file-resizer": "^0.4.7",
     "react-input-emoji": "^4.0.9",
+    "react-json-to-csv": "^1.0.4",
     "react-load-script": "^0.0.6",
     "react-lorem-ipsum": "^1.4.9",
     "react-paginate": "^8.0.0",
@@ -63,6 +65,7 @@
     "react-scripts": "^5.0.0",
     "react-select": "^5.2.1",
     "react-table": "^7.7.0",
+    "react-textarea-autosize": "^8.3.3",
     "react-tooltip": "^4.2.21",
     "recharts": "^2.1.6",
     "sass": "^1.48.0",
