--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@uiw/react-markdown-preview": "^4.0.11",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "browser-image-compression": "^1.0.17",
@@ -102,6 +103,7 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-plugin-prismjs": "^2.1.0"
+    "babel-plugin-prismjs": "^2.1.0",
+    "json-pretty-textarea": "^1.0.8"
   }
 }
