update otherprojects and skillchart radar

--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "react-tooltip": "^4.2.21",
     "recharts": "^2.1.6",
     "sass": "^1.48.0",
+    "skills-radar-chart": "^1.0.5",
     "styled-components": "^5.3.5",
     "trends": "^0.0.1",
     "web-vitals": "^1.1.2",
