--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-json-to-csv": "^1.0.4",
     "react-load-script": "^0.0.6",
     "react-lorem-ipsum": "^1.4.9",
+    "react-p5": "^1.3.30",
     "react-paginate": "^8.0.0",
     "react-router": "^6.0.1",
     "react-router-dom": "^6.0.1",
