--- a/package.json
+++ b/package.json
@@ -78,7 +78,9 @@
     "web-vitals": "^3.1.0",
     "widget": "^0.0.2",
     "widget-google-trends": "^0.0.1",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "postcss": "^8.1.9",
+    "postcss-import": "12.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
